<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_food"
        android:title="@string/title_food" />
    <item
        android:id="@+id/navigation_exercise"
        android:icon="@drawable/ic_exercise"
        android:title="@string/title_exercise" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting" />






</menu>