<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.please.ui.home.FoodFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.please.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <activity
        android:id="@+id/navigation_calendar"
        android:name="com.example.please.CalendarActivity"
        android:label="@string/title_calendar"
        tools:layout="@layout/activity_calendar" />
    <fragment
        android:id="@+id/navigation_food"
        android:name="com.example.please.ui.food.FoodFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>